--- a/CSS 이론/ex_css_1.html
+++ b/CSS 이론/ex_css_1.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <style>
-        h1 {color:red}
+        h1,h2 {color:red; font-size: 10px}
+        h2 {text-decoration: underline;}
+        header h1 {border:1px solid red;}
+
     </style>
   </head>
 <body>
+    <header>
     <h1>CSS</h1>
+    </header>
     <h2>JavaScript</h2>
     <h3>HTML</h3>
     <h1>PHP</h1>
