--- a/CSS 실습/css실습.html
+++ b/CSS 실습/css실습.html
@@ -2,31 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <style>
-    header{
-        border-bottom: 1px solid gray;
-        padding: 20px;
-        
-    }
-
-    nav{
-        border-right: 1px solid gray;
-        width: 200px;
-        height: 600px;
-        float: left;
-
-    }
-    nav ol{
-        list-style: none;
-    }
-
-    article{
-        float: left;
-        padding: 20px;
-    }
-    
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="/Users/Mamosoo/WebStudy/CSS 실습/style.css">
   </head>
   <body>
   
